[package]
name = "iunorm"
description = "Map normalized floating-point numbers to/from (un)signed integers"
version = "0.1.2"
edition = "2021"
rust-version = "1.58.1"
authors = ["José Luis Cruz <joseluis@andamira.net>"]
repository = "https://github.com/joseluis/iunorm"
documentation = "https://docs.rs/iunorm"
license = "MIT OR Apache-2.0"
include = [
	"/src/**/*.rs",
	"res/",
	"/Cargo.toml",
	"/LICENSE-*",
	"/README.md",
]
categories = ["no-std", "encoding", "data-structures"]
keywords = ["normalization", "normal", "float", "integer"]
publish = true

[dependencies]
paste = "1.0.9"

[features]

[dev-dependencies]

[package.metadata.docs.rs]
rustdoc-args = [ "--html-in-header", "./res/header.html" ]

[badges]
# actively-developed, passively-maintained, looking-for-maintainer, as-is,
# experimental, deprecated, none
maintenance = { status = "actively-developed" }
