[package]
name = "iunorm"
description = "Map normalized floating-point numbers to/from (un)signed integers"
version = "0.2.1"
edition = "2018" # 2021 increases MSRV to 1.56.1
rust-version = "1.43.1" # checked for v0.2.1
authors = ["José Luis Cruz <joseluis@andamira.net>"]
repository = "https://github.com/joseluis/iunorm"
documentation = "https://docs.rs/iunorm"
license = "MIT OR Apache-2.0"
include = [
	"/src/**/*.rs",
	"res/",
	"/Cargo.toml",
	"/LICENSE-*",
	"/README.md",
]
categories = ["no-std", "encoding", "data-structures"]
keywords = ["normalization", "normal", "float", "integer"]
publish = true

[dependencies]
paste = "1.0.12"

[features]
default = ["std"]
std = []

[dev-dependencies]
approx = { version = "0.5.1", default-features = false }

[badges]
maintenance = { status = "passively-maintained" }
